--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^10.0.0",
     "inquirer": "^8.1.2",
     "mysql": "^2.18.1",
-    "asciiart-logo": "^0.2.6"
+    "asciiart-logo": "^0.2.6",
+    "express": "^4.17.1"
   }
 }
